--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
+dropbox = "^10.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
