--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
+dropbox = "^10.2.0"
+pandas = "^1.1.4"
+oyaml = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
