drop dummy tests folder

--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -24,6 +24,10 @@ jobs:
         pip install poetry
         poetry install --no-dev
 
+    - name: Build
+      run: |
+        poetry build
+
     - name: Publish
       run: |
         poetry publish -u villoro -p $PYPI_PASSWORD
