Only publish on commits to master

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,10 +1,10 @@
-name: Integration tests
+name: Publish package
 env:
   PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
 
 on:
   push:
-    # branches: [master]
+    branches: [master]
 
 jobs:
   build:
