--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,33 +1,28 @@
-name: Publish package
-env:
-  PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+name: Publish
+
+permissions:
+  id-token: write
 
 on:
   push:
-    branches: [master]
+    branches:
+      - main
+    paths:
+      - pyproject.toml
 
 jobs:
-  build:
+  publish_pypi:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
 
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install --no-dev
+    - name: Install uv
+      run: pip install uv
 
     - name: Build
-      run: |
-        poetry build
+      run: uv build
 
     - name: Publish
-      run: |
-        poetry publish -u villoro -p $PYPI_PASSWORD
+      run: uv publish
