--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,26 @@
-[tool.black]
-line-length = 100
-
-[tool.poetry]
+[project]
 name = "vdropbox"
-version = "0.2.7"
+version = "1.0.0"
 description = "Utilities to read/write python objects to/from dropbox"
-authors = ["Arnau Villoro <arnau@villoro.com>"]
-maintainers = ["Arnau Villoro <arnau@villoro.com>"]
-license = "MIT"
+authors = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
+maintainers = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
 readme = "README.md"
-repository = "https://github.com/villoro/vdropbox"
+license = { text = "MIT" }
+requires-python = ">=3.8"
+
 classifiers = [
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "Intended Audience :: Education",
-    "Intended Audience :: Manufacturing",
-    "Intended Audience :: Science/Research",
+    "Topic :: Security",
+    "Topic :: Utilities",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.6.1"
-dropbox = "^11.0.0"
-pandas = "^1.1.4"
-oyaml = "^1.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+dependencies = []
